--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>작삼예제</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="shortcut icon" href="http://www.example.com/myicon.ico" />
+    <link rel="shortcut icon" href="#" />
   </head>
   <body>
     <header>
